feat(code): Update code
This commit updates the code to match the current state of the develop branch